# hvd-cvbs-decoding

./: .gitignore
orc-plugin_hvd/: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  flake.nix  instructions.md  vcpkg.json
orc-plugin_hvd/.github/: copilot-instructions.md
orc-plugin_hvd/.github/workflows/: ci.yml
orc-plugin_hvd/cmake/: DecodeOrcPluginSDKHelpers.cmake
orc-plugin_hvd/docs/: PORTING.md
orc-plugin_hvd/reference/: README.md  THEORY.md  hvd_decode.py  run_tests.py
orc-plugin_hvd/reference/hvd/: __init__.py  decoder.py  encode.py  tbc.py
orc-plugin_hvd/scripts/: check_sdk_boundary.sh  package_local.sh
orc-plugin_hvd/src/: frame_bridge.cpp  frame_bridge.h  hvd_chroma_decoder_stage.cpp  hvd_chroma_decoder_stage.h  plugin.cpp  plugin.h
orc-plugin_hvd/src/engine/: colour.cpp  colour.h  engine.cpp  engine.h  fft2d.cpp  fft2d.h  gradients.h  holographic_init.cpp  holographic_init.h  hvd_config.h  lockin.cpp  lockin.h  motion.cpp  motion.h  ntsc_geometry.cpp  ntsc_geometry.h  plane.h  sequence.cpp  sequence.h  temporal.cpp  temporal.h  variational.cpp  variational.h
orc-plugin_hvd/tests/: CMakeLists.txt  check.h  plugin_entrypoints_test.cpp  stage_smoke_test.cpp
orc-plugin_hvd/tests/engine/: colour_test.cpp  engine_temporal_test.cpp  field_order_test.cpp  frame_bridge_test.cpp  gradients_test.cpp  lockin_test.cpp  lossless_identity_test.cpp  motion_test.cpp  motion_v2_test.cpp  sequence_test.cpp  temporal_test.cpp  variational_v2_test.cpp
research/: THEORY.md  bench_interlace.py  bench_motion.py  hvd_decode.py
research/hvd/: decoder.py
research/tests_extra/: acc_test.py  burst_test.py  drizzle_test.py  subpel_test.py
